divide auth
